--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
-    <link rel="shortcut icon" type="image/ico" href="./favicon.ico" />
-    <title>Jacbots Match Planning</title>
+    <link rel="shortcut icon" type="image/ico" href="./jagbots.png" />
+    <title>Jagbots Match Planning</title>
 </head>
 <body>
 <noscript>You need to enable JavaScript to run this app.</noscript>
